--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="categories">
             		<div class="categories-items">
             			<div class="cat-image">
-            				<img src="images/bedroom.jpg">
+            				<img src="images/bedroom.JPG">
             			</div>
             			<div class="cat-title">
             				<a href="bedroom.html" target="_blank"><span>Bedroom</span></a>
@@ -98,7 +98,7 @@
             		</div>
             		<div class="categories-items">
             			<div class="cat-image">
-            				<img src="images/dining.jpg">
+            				<img src="images/dining.JPG">
             			</div>
             			<div class="cat-title">
             				<a href="dining.html" target="_blank"><span>Dining</span></a>
@@ -106,7 +106,7 @@
             		</div>
             		<div class="categories-items">
             			<div class="cat-image">
-            				<img src="images/kids.jpg">
+            				<img src="images/kids.JPG">
             			</div>
             			<div class="cat-title">
             				<a href="kids.html" target="_blank"><span>Kids</span></a>
@@ -114,7 +114,7 @@
             		</div>
                     <div class="categories-items">
                         <div class="cat-image">
-                            <img src="images/dressing.jpg">
+                            <img src="images/dressing.JPG">
                         </div>
                         <div class="cat-title">
                             <a href="bedroom.html" target="_blank"><span>Bedroom</span></a>
@@ -122,7 +122,7 @@
                     </div>
                     <div class="categories-items">
                         <div class="cat-image">
-                            <img src="images/computer.jpg">
+                            <img src="images/computer.JPG">
                         </div>
                         <div class="cat-title">
                             <a href="study.html" target="_blank"><span>Study</span></a>
@@ -130,7 +130,7 @@
                     </div>
                     <div class="categories-items">
                         <div class="cat-image">
-                            <img src="images/sofa.jpg">
+                            <img src="images/sofa.JPG">
                         </div>
                         <div class="cat-title">
                             <a href="living.html" target="_blank"><span>Living Room</span></a>
@@ -138,7 +138,7 @@
                     </div>
                     <div class="categories-items">
                         <div class="cat-image">
-                            <img src="images/wardrobe.jpg">
+                            <img src="images/wardrobe.JPG">
                         </div>
                         <div class="cat-title">
                             <a href="bedroom.html" target="_blank"><span>Bedroom</span></a>
@@ -146,7 +146,7 @@
                     </div>
                     <div class="categories-items">
                         <div class="cat-image">
-                            <img src="images/office.jpg">
+                            <img src="images/office.JPG">
                         </div>
                         <div class="cat-title">
                             <a href="office.html" target="_blank"><span>office</span></a>
