image file extention has been updated

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="categories">
             		<div class="categories-items">
             			<div class="cat-image">
-            				<img src="images/bedroom.JPEG">
+            				<img src="images/bedroom.JPG">
             			</div>
             			<div class="cat-title">
             				<a href="bedroom.html" target="_blank"><span>Bedroom</span></a>
@@ -98,7 +98,7 @@
             		</div>
             		<div class="categories-items">
             			<div class="cat-image">
-            				<img src="images/dining.JPEG">
+            				<img src="images/dining.JPG">
             			</div>
             			<div class="cat-title">
             				<a href="dining.html" target="_blank"><span>Dining</span></a>
