image file extention has been updated

--- a/chair.html
+++ b/chair.html
@@ -99,7 +99,7 @@
                 <div class="office-container-row">
                     <div class="office-items">
                         <div class="item-image">
-                            <img src="images/chair/high-back-managerial-chair-212.jpg">
+                            <img src="images/chair/high-back-managerial-chair-212.JPG">
                         </div>
                         <div class="item-name-price">
                             <p>high-back-managerial-chair-212</p>
@@ -108,7 +108,7 @@
                     </div>
                     <div class="office-items">
                         <div class="item-image">
-                            <img src="images/chair/high-back-managerial-chair-213.jpg">
+                            <img src="images/chair/high-back-managerial-chair-213.JPG">
                         </div>
                         <div class="item-name-price">
                             <p>high-back-managerial-chair-213</p>
@@ -117,7 +117,7 @@
                     </div>
                     <div class="office-items">
                         <div class="item-image">
-                            <img src="images/chair/high-back-managerial-chair-214.jpg">
+                            <img src="images/chair/high-back-managerial-chair-214.JPG">
                         </div>
                         <div class="item-name-price">
                             <p>high-back-managerial-chair-214</p>
@@ -126,7 +126,7 @@
                     </div>
                     <div class="office-items">
                         <div class="item-image">
-                            <img src="images/chair/high-back-managerial-chair-215.jpg">
+                            <img src="images/chair/high-back-managerial-chair-215.JPG">
                         </div>
                         <div class="item-name-price">
                             <p>high-back-managerial-chair-215</p>
@@ -137,7 +137,7 @@
             <div class="office-container-row">
                 <div class="office-items">
                     <div class="item-image">
-                        <img src="images/chair/high-back-managerial-chair-216.jpg">
+                        <img src="images/chair/high-back-managerial-chair-216.JPG">
                     </div>
                     <div class="item-name-price">
                         <p>high-back-managerial-chair-216</p>
@@ -146,7 +146,7 @@
                 </div>
                 <div class="office-items">
                     <div class="item-image">
-                        <img src="images/chair/high-back-swivel-chair-202.jpg">
+                        <img src="images/chair/high-back-swivel-chair-202.JPG">
                     </div>
                     <div class="item-name-price">
                         <p>high-back-swivel-chair-202</p>
@@ -155,7 +155,7 @@
                 </div>
                 <div class="office-items">
                     <div class="item-image">
-                        <img src="images/chair/wooden-mid-back-swivel-chair-304.jpg">
+                        <img src="images/chair/wooden-mid-back-swivel-chair-304.JPG">
                     </div>
                     <div class="item-name-price">
                         <p>wooden-mid-back-swivel-chair-304</p>
@@ -164,7 +164,7 @@
                 </div>
                 <div class="office-items">
                     <div class="item-image">
-                        <img src="images/chair/wooden-mid-back-swivel-chair-305.jpg">
+                        <img src="images/chair/wooden-mid-back-swivel-chair-305.JPG">
                     </div>
                     <div class="item-name-price">
                         <p>wooden-mid-back-swivel-chair-305</p>
