--- a/kids.html
+++ b/kids.html
@@ -99,7 +99,7 @@
                 <div class="office-container-row">
                     <div class="office-items">
                         <div class="item-image">
-                            <img src="images/kids/gen-z-double-bed-111.jpg">
+                            <img src="images/kids/gen-z-double-bed-111.JPG">
                         </div>
                         <div class="item-name-price">
                             <p>gen-z-double-bed-111</p>
@@ -108,7 +108,7 @@
                     </div>
                     <div class="office-items">
                         <div class="item-image">
-                            <img src="images/kids/gen-z-double-bed-112.jpg">
+                            <img src="images/kids/gen-z-double-bed-112.JPG">
                         </div>
                         <div class="item-name-price">
                             <p>gen-z-double-bed-112</p>
@@ -117,7 +117,7 @@
                     </div>
                     <div class="office-items">
                         <div class="item-image">
-                            <img src="images/kids/gen-z-semi-double-bed-111.jpg">
+                            <img src="images/kids/gen-z-semi-double-bed-111.JPG">
                         </div>
                         <div class="item-name-price">
                             <p>gen-z-semi-double-bed-111</p>
@@ -126,7 +126,7 @@
                     </div>
                     <div class="office-items">
                         <div class="item-image">
-                            <img src="images/kids/gen-z-semi-double-bed-112.jpg">
+                            <img src="images/kids/gen-z-semi-double-bed-112.JPG">
                         </div>
                         <div class="item-name-price">
                             <p>gen-z-semi-double-bed-112</p>
@@ -137,7 +137,7 @@
             <div class="office-container-row">
                 <div class="office-items">
                     <div class="item-image">
-                        <img src="images/kids/wooden-kids-bed-301.jpg">
+                        <img src="images/kids/wooden-kids-bed-301.JPG">
                     </div>
                     <div class="item-name-price">
                         <p>wooden-kids-bed-301</p>
@@ -146,7 +146,7 @@
                 </div>
                 <div class="office-items">
                     <div class="item-image">
-                        <img src="images/kids/wooden-kids-bed-302.jpg">
+                        <img src="images/kids/wooden-kids-bed-302.JPG">
                     </div>
                     <div class="item-name-price">
                         <p>wooden-kids-bed-302</p>
@@ -155,7 +155,7 @@
                 </div>
                 <div class="office-items">
                     <div class="item-image">
-                        <img src="images/kids/wooden-kids-bed-303.jpg">
+                        <img src="images/kids/wooden-kids-bed-303.JPG">
                     </div>
                     <div class="item-name-price">
                         <p>wooden-kids-bed-303</p>
@@ -164,7 +164,7 @@
                 </div>
                 <div class="office-items">
                     <div class="item-image">
-                        <img src="images/kids/wooden-kids-bed-304.jpg">
+                        <img src="images/kids/wooden-kids-bed-304.JPG">
                     </div>
                     <div class="item-name-price">
                         <p>wooden-kids-bed-304</p>
