--- a/living.html
+++ b/living.html
@@ -99,7 +99,7 @@
                 <div class="office-container-row">
                     <div class="office-items">
                         <div class="item-image">
-                            <img src="images/living/wooden-azure-sofa-set-with-lounge-chair-hsdc-332-hssc-332-hs.jpg">
+                            <img src="images/living/wooden-azure-sofa-set-with-lounge-chair-hsdc-332-hssc-332-hs.JPG">
                         </div>
                         <div class="item-name-price">
                             <p>wooden-sofa-set-with-lounge-chair-332</p>
@@ -108,7 +108,7 @@
                     </div>
                     <div class="office-items">
                         <div class="item-image">
-                            <img src="images/living/wooden-ivory-sofa-set-hsdc-331-hssc-331-.jpg">
+                            <img src="images/living/wooden-ivory-sofa-set-hsdc-331-hssc-331-.JPG">
                         </div>
                         <div class="item-name-price">
                             <p>wooden-ivory-sofa-set-331</p>
@@ -117,7 +117,7 @@
                     </div>
                     <div class="office-items">
                         <div class="item-image">
-                            <img src="images/living/wooden-sofa-set-hsdc-301-hssc-301-.jpg">
+                            <img src="images/living/wooden-sofa-set-hsdc-301-hssc-301-.JPG">
                         </div>
                         <div class="item-name-price">
                             <p>wooden-sofa-set-301</p>
@@ -126,7 +126,7 @@
                     </div>
                     <div class="office-items">
                         <div class="item-image">
-                            <img src="images/living/wooden-sofa-set-hsdc-313-hssc-313.jpg">
+                            <img src="images/living/wooden-sofa-set-hsdc-313-hssc-313.JPG">
                         </div>
                         <div class="item-name-price">
                             <p>wooden-sofa-set-313</p>
@@ -137,7 +137,7 @@
                 <div class="office-container-row">
                     <div class="office-items">
                         <div class="item-image">
-                            <img src="images/living/wooden-sofa-set-hsdc-324-hssc-324-1.jpg">
+                            <img src="images/living/wooden-sofa-set-hsdc-324-hssc-324-1.JPG">
                         </div>
                         <div class="item-name-price">
                             <p>wooden-sofa-set-324</p>
@@ -146,7 +146,7 @@
                     </div>
                     <div class="office-items">
                         <div class="item-image">
-                            <img src="images/living/wooden-sofa-set-hsdc-333-hsdc-333-hssc-333-.jpg">
+                            <img src="images/living/wooden-sofa-set-hsdc-333-hsdc-333-hssc-333-.JPG">
                         </div>
                         <div class="item-name-price">
                             <p>wooden-sofa-set-333</p>
@@ -155,7 +155,7 @@
                     </div>
                     <div class="office-items">
                         <div class="item-image">
-                            <img src="images/living/wooden-sofa-set-hsdch-303-hssch-303-.jpg">
+                            <img src="images/living/wooden-sofa-set-hsdch-303-hssch-303-.JPG">
                         </div>
                         <div class="item-name-price">
                             <p>wooden-sofa-set-303</p>
